caputils-0.7.14
---------------

	* fix: [capinfo] crash when 0 packets.

caputils-0.7.13
---------------

	* fix: minor build fixes for old platforms.
	* fix: [pcap2cap] rewritten logic.
	* add: Support for BPF filters (when using local tools)
	* add: [capinfo] packet size min/avg/max.
	* add: [capinfo] show present capture interfaces.

caputils-0.7.12
---------------

	* fix: [capfilter] suppress output
	* fix: [capmerge] fixing sorting regression from previous release.

caputils-0.7.11
---------------

	* fix: [capfilter] adding `--invert` for inverting the filter.
	* fix: [capfilter] print filter on stderr so it is possible to pipe.
	* fix: [capfilter] fix crash when not using `--rejects`.
	* fix: [capmerge] fix bug where it only sorted the first 10k packets.
	* fix: [capfilter] make capfilter actually work.
	* fix: [capinfo] removing extra newline after marker info.
	* fix: [filter] update documentation.
	* fix: [capshow] retain the packet number when filtering.
	* fix: [utils] Ensure IFHWADDRLEN is defined.
	* add: [capinfo] Exit with code 1 if any error occurs.

caputils-0.7.10
---------------

	* add: support for automatically creating and unlinking when reading.
	* add: timepico_now function to get current time as timepico.
	* add: stream_num_addresses to get number of addresses associated with
	       a stream.
	* add: [capshow] support for ARP.
	* add: [capshow] support for showing timestamps relative to first
	       packet. Enabled by default.
	* fix: [gcc 3.3] using alias instead of weakref for be64toh workaround.
	* add: function to open stream from FILE pointer.
	* add: capmerge: a tool to merge cap-files.
	* add: stream_peek to look at packet but don't pop it.
	* fix: stream_copy now truncates packets where caplen is greater than
	       wire len, e.g. when capturing using "novalen slen=1500" on a DAG
	       card. The truncated part is only zeroes.
	* fix: [capinfo] pad duration seconds with zero when single digit.